header fix, posting page spacing

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,37 +1,37 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .welcome {
-    font-size: 2rem;
-    padding-left: 4rem;
+  font-size: 2rem;
+  padding-left: 4rem;
 }
 
 .nav {
-    background-color: #e7e7db;
-    color: #9e0b0f;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.5rem;
-    gap: 4rem;
-    padding-right: 4rem;
+  background-color: black;
+  color: white;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.5rem;
+  gap: 4rem;
+  padding-right: 4rem;
 }
 
 .nav ul {
-    padding: 0px;
-    margin: 0px;
-    border: 6px;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    gap: 3rem;
+  padding: 0px;
+  margin: 0px;
+  border: 6px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3rem;
 }
 
 .nav a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 /* .nav li:hover{
@@ -40,49 +40,49 @@
 } */
 
 .posting:hover {
-    background: rgba(0, 0, 0, 0.1);
-    padding: 16px;
-    border-radius: 8px;
+  background: rgba(0, 0, 0, 0.1);
+  padding: 16px;
+  border-radius: 8px;
 }
 
 .dropdown-button {
-    border: none;
-    font-family: "Times New Roman", Times, serif;
-    width: 8rem;
-    height: 3.5rem;
-    font-size: 1.5rem;
-    background-color: #9e0b0f;
-    color: white;
+  border: none;
+  font-family: "Times New Roman", Times, serif;
+  width: 8rem;
+  height: 3.5rem;
+  font-size: 1.5rem;
+  background-color: #9e0b0f;
+  color: white;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .dropdown-items {
-    display: none;
-    position: absolute;
-    background-color: #e7e7db;
-    min-width: 160px;
+  display: none;
+  position: absolute;
+  background-color: #e7e7db;
+  min-width: 160px;
 }
 
 .dropdown-items a {
-    color: black;
-    padding: 1rem 1rem;
-    text-decoration: none;
-    display: block;
-    border: 1px;
+  color: black;
+  padding: 1rem 1rem;
+  text-decoration: none;
+  display: block;
+  border: 1px;
 }
 
 .dropdown-items a:hover {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-items {
-    display: block;
+  display: block;
 }
 
 .dropdown:hover .dropdown-button {
-    background-color: #b84246;
+  background-color: #b84246;
 }
